update code about greedy algorithms